--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/app.js",
+    "start": "node ./src/utils/server.js",
     "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
